--- a/yml/ruby2.2.1_rails4.2.1/Dockerfile
+++ b/yml/ruby2.2.1_rails4.2.1/Dockerfile
@@ -1,5 +1,5 @@
 FROM ruby:2.2.1
-RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs
+RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs sqlite3 libsqlite3-dev
 RUN mkdir /myapp
 WORKDIR /myapp
 COPY Gemfile /myapp/Gemfile
