--- a/yml/postgreSQL_pgadmin4/docker-compose.yml
+++ b/yml/postgreSQL_pgadmin4/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "15432:5432"
     volumes:
-      - /home/mintpaulo/postgreSQL:/var/lib/postgresql/data 
+      - /home/docker/postgresql-data:/var/lib/postgresql/data 
     networks:
       - postgres-network
       
@@ -19,6 +19,9 @@ services:
       PGADMIN_DEFAULT_PASSWORD: "PgAdmin2019!"
     ports:
       - "16543:80"
+    volumes:
+      - /home/docker/pgadmin:/var/lib/pgadmin
+      - /home/docker/tmp/servers.json:/servers.json
     depends_on:
       - postgres-compose
     networks:
