--- a/yml/postgreSQL_pgadmin4/docker-compose.yml
+++ b/yml/postgreSQL_pgadmin4/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   postgres-compose:
-    image: postgres
+    image: postgres:11
     environment:
       POSTGRES_PASSWORD: "Postgres2019!"
     ports:
