--- a/yml/nextcloud_mariaDB_btrfs/conf.d/proxy_ssl.conf
+++ b/yml/nextcloud_mariaDB_btrfs/conf.d/proxy_ssl.conf
@@ -5,14 +5,15 @@ server {
   ssl_certificate_key /etc/nginx/conf.d/key.pem;
 
   location / {
-    proxy_pass http://nextcloud-btrfs-app:80/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_pass http://nextcloud-btrfs-app:80/;
+    proxy_read_timeout 36000s;
 
-    client_max_body_size 0;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+    client_max_body_size 0;
 
     access_log /var/log/nginx/nextcloud.access.log;
     error_log /var/log/nginx/nextcloud.error.log;
