Adicionado em arquivo de configuração de proxy nginx a mesma porta exporta em serviço nextcloud-btrfs-proxy do docker-compose.yml - remover alerta em Segurança & avisos de configuração de Nextcloud

--- a/yml/nextcloud_mariaDB_btrfs/conf.d/proxy_ssl.conf
+++ b/yml/nextcloud_mariaDB_btrfs/conf.d/proxy_ssl.conf
@@ -20,10 +20,12 @@ server {
   }
 
   location /.well-known/carddav {
-    return 301 $scheme://$host/remote.php/dav;
+    return 301 $scheme://$host:8083/remote.php/dav;
   }
 
   location /.well-known/caldav {
-    return 301 $scheme://$host/remote.php/dav;
+    return 301 $scheme://$host:8083/remote.php/dav;
   }
 }
+
+# em redirecionamento da rota '/.well-known/carddav' e '/.well-known/caldav' foi necessário informar a mesma porta(8083) exposta em serviço 'nextcloud-btrfs-proxy' do 'docker-compose.yml'
